[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streetlevel"
version = "0.12.4"
license = "MIT"
authors = [
  { name="sk-zk", email="sk-zk@users.noreply.github.com" },
]
description = "Download panoramas and metadata from Street View, Look Around, and more"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "aiohttp",
    "bd09convertor",
    "CoordinatesConverter",
    "cython",
    "numpy",
    "Pillow",
    "protobuf > 4",
    "pycryptodome",
    "pyequilib",
    "pyexiv2",
    "pyfrpc",
    "pyproj",
    "pytest",
    "pytest-asyncio",
    "requests",
    "scipy",
]

[project.urls]
"Homepage" = "https://github.com/sk-zk/streetlevel"
"Bug Tracker" = "https://github.com/sk-zk/streetlevel/issues"
